--- a/adultCensus/preprocessing.ipynb
+++ b/adultCensus/preprocessing.ipynb
@@ -1,1 +1,246 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "01b40a69-1457-4693-bac7-54b28a828d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target encoding: 1 => >50K, 0 => <=50K (or fallback mapping printed above if used).\n",
+      "Categorical columns (6): ['workclass', 'marital-status', 'occupation', 'relationship', 'sex', 'native-country']\n",
+      "Numeric columns (6): ['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week']\n",
+      "[Split 1] seed=42 saved:\n",
+      "  data/adult_split1_train.csv  -> (39073, 94)\n",
+      "  data/adult_split1_test.csv   -> (9769, 94)\n",
+      "[Split 2] seed=202 saved:\n",
+      "  data/adult_split2_train.csv  -> (39073, 94)\n",
+      "  data/adult_split2_test.csv   -> (9769, 94)\n",
+      "[Split 3] seed=777 saved:\n",
+      "  data/adult_split3_train.csv  -> (39073, 94)\n",
+      "  data/adult_split3_test.csv   -> (9769, 94)\n",
+      "[Split 4] seed=1234 saved:\n",
+      "  data/adult_split4_train.csv  -> (39073, 93)\n",
+      "  data/adult_split4_test.csv   -> (9769, 93)\n",
+      "[Split 5] seed=9001 saved:\n",
+      "  data/adult_split5_train.csv  -> (39073, 93)\n",
+      "  data/adult_split5_test.csv   -> (9769, 93)\n",
+      "\n",
+      "Done. Created 5 train/test splits in 'data/' with model features + target + (race, gender, education).\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "import inspect\n",
+    "\n",
+    "from ucimlrepo import fetch_ucirepo\n",
+    "\n",
+    "# =========================\n",
+    "# 1) Load Adult dataset\n",
+    "# =========================\n",
+    "adult = fetch_ucirepo(id=2)  # UCI Adult/Census Income\n",
+    "X = adult.data.features.copy()\n",
+    "y = adult.data.targets\n",
+    "\n",
+    "# If y is a DataFrame, squeeze to Series\n",
+    "if isinstance(y, pd.DataFrame):\n",
+    "    y = y.iloc[:, 0]\n",
+    "\n",
+    "# =========================\n",
+    "# 2) Clean + encode target\n",
+    "# =========================\n",
+    "def _clean_label(val):\n",
+    "    if pd.isna(val):\n",
+    "        return np.nan\n",
+    "    s = str(val).strip().replace(\".\", \"\")\n",
+    "    s = re.sub(r\"\\s+\", \"\", s)\n",
+    "    return s\n",
+    "\n",
+    "y_clean = y.apply(_clean_label)\n",
+    "\n",
+    "# Binary encoding: >50K -> 1, <=50K -> 0 (fallback prints mapping if unexpected labels)\n",
+    "if set(y_clean.dropna().unique()) <= {\">50K\", \"<=50K\"}:\n",
+    "    y_encoded = (y_clean == \">50K\").astype(int).values\n",
+    "else:\n",
+    "    le = LabelEncoder()\n",
+    "    y_encoded = le.fit_transform(y_clean.fillna(\"missing\").values)\n",
+    "    print(\"Label mapping (fallback):\", dict(zip(le.classes_, le.transform(le.classes_))))\n",
+    "print(\"Target encoding: 1 => >50K, 0 => <=50K (or fallback mapping printed above if used).\")\n",
+    "\n",
+    "# ============================================\n",
+    "# 3) Build explicit fairness/sensitive columns\n",
+    "#    (race, gender, education) — NOT age\n",
+    "# ============================================\n",
+    "# Normalize column names (handle minor naming differences)\n",
+    "X_cols_lower = {c.lower(): c for c in X.columns}\n",
+    "\n",
+    "# gender from 'sex'\n",
+    "sex_col = X_cols_lower.get(\"sex\", None)\n",
+    "if sex_col is None:\n",
+    "    raise KeyError(\"Could not find 'sex' column in Adult features.\")\n",
+    "X[\"gender\"] = (\n",
+    "    X[sex_col].astype(str).str.strip().str.lower()\n",
+    "      .map({\"male\": \"male\", \"female\": \"female\"})\n",
+    "      .fillna(\"unknown\")\n",
+    ")\n",
+    "\n",
+    "# race from 'race'\n",
+    "race_col = X_cols_lower.get(\"race\", None)\n",
+    "if race_col is None:\n",
+    "    raise KeyError(\"Could not find 'race' column in Adult features.\")\n",
+    "X[\"race\"] = X[race_col].astype(str).str.strip()\n",
+    "\n",
+    "# education from 'education'\n",
+    "edu_col = X_cols_lower.get(\"education\", None)\n",
+    "if edu_col is None:\n",
+    "    raise KeyError(\"Could not find 'education' column in Adult features.\")\n",
+    "X[\"education\"] = X[edu_col].astype(str).str.strip()\n",
+    "\n",
+    "# ============================================\n",
+    "# 4) Exclude fairness cols from model features\n",
+    "# ============================================\n",
+    "# We will compute fairness later using these three columns\n",
+    "sensitive_cols = [\"race\", \"gender\", \"education\"]\n",
+    "\n",
+    "# Keep age and other features for modeling (age is NOT used for fairness later)\n",
+    "feature_X = X.drop(columns=sensitive_cols, errors=\"ignore\")\n",
+    "\n",
+    "# Identify column types on model features\n",
+    "cat_cols = feature_X.select_dtypes(include=[\"object\", \"category\", \"bool\"]).columns.tolist()\n",
+    "num_cols = feature_X.select_dtypes(exclude=[\"object\", \"category\", \"bool\"]).columns.tolist()\n",
+    "\n",
+    "print(f\"Categorical columns ({len(cat_cols)}):\", cat_cols)\n",
+    "print(f\"Numeric columns ({len(num_cols)}):\", num_cols)\n",
+    "\n",
+    "# ============================================\n",
+    "# 5) Preprocessing pipelines (version-robust)\n",
+    "# ============================================\n",
+    "numeric_pipe = Pipeline(steps=[\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "# Handle OneHotEncoder sparse/sparse_output param across sklearn versions\n",
+    "ohe_params = {}\n",
+    "if \"sparse_output\" in inspect.signature(OneHotEncoder).parameters:\n",
+    "    ohe_params[\"sparse_output\"] = False  # sklearn >= 1.2\n",
+    "else:\n",
+    "    ohe_params[\"sparse\"] = False         # sklearn < 1.2\n",
+    "\n",
+    "categorical_pipe = Pipeline(steps=[\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"constant\", fill_value=\"missing\")),\n",
+    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\", **ohe_params))\n",
+    "])\n",
+    "\n",
+    "def make_preprocessor():\n",
+    "    return ColumnTransformer(\n",
+    "        transformers=[\n",
+    "            (\"num\", numeric_pipe, num_cols),\n",
+    "            (\"cat\", categorical_pipe, cat_cols),\n",
+    "        ],\n",
+    "        remainder=\"drop\"\n",
+    "    )\n",
+    "\n",
+    "# ======================================================\n",
+    "# 6) Split BEFORE preprocessing (avoid train->test leak)\n",
+    "#    Make 5 stratified 80/20 splits and save to disk\n",
+    "# ======================================================\n",
+    "os.makedirs(\"data\", exist_ok=True)\n",
+    "seeds = [42, 202, 777, 1234, 9001]\n",
+    "\n",
+    "for i, seed in enumerate(seeds, start=1):\n",
+    "    X_train_raw, X_test_raw, y_train, y_test = train_test_split(\n",
+    "        feature_X, y_encoded, test_size=0.20, random_state=seed, stratify=y_encoded\n",
+    "    )\n",
+    "\n",
+    "    # Keep fairness columns (unaltered) aligned with indices for fairness evaluation later\n",
+    "    sens_train = X.loc[X_train_raw.index, sensitive_cols].copy()\n",
+    "    sens_test  = X.loc[X_test_raw.index, sensitive_cols].copy()\n",
+    "\n",
+    "    preprocessor = make_preprocessor()\n",
+    "\n",
+    "    # Fit only on training data\n",
+    "    X_train_processed = preprocessor.fit_transform(X_train_raw)\n",
+    "    X_test_processed  = preprocessor.transform(X_test_raw)\n",
+    "\n",
+    "    # Robust feature names\n",
+    "    try:\n",
+    "        processed_feature_names = preprocessor.get_feature_names_out()\n",
+    "    except AttributeError:\n",
+    "        # Older sklearn fallback\n",
+    "        ohe = preprocessor.named_transformers_[\"cat\"].named_steps[\"onehot\"]\n",
+    "        try:\n",
+    "            ohe_feature_names = ohe.get_feature_names_out(cat_cols)\n",
+    "        except AttributeError:\n",
+    "            ohe_feature_names = ohe.get_feature_names(cat_cols)\n",
+    "        processed_feature_names = np.array(list(num_cols) + list(ohe_feature_names))\n",
+    "\n",
+    "    # Build DataFrames (model features only)\n",
+    "    df_train = pd.DataFrame(X_train_processed, columns=processed_feature_names, index=X_train_raw.index)\n",
+    "    df_test  = pd.DataFrame(X_test_processed,  columns=processed_feature_names, index=X_test_raw.index)\n",
+    "\n",
+    "    # Add target\n",
+    "    df_train[\"target\"] = y_train\n",
+    "    df_test[\"target\"] = y_test\n",
+    "\n",
+    "    # Append fairness columns (raw, unencoded) for later fairness analysis\n",
+    "    for col in sensitive_cols:\n",
+    "        df_train[col] = sens_train[col].values\n",
+    "        df_test[col]  = sens_test[col].values\n",
+    "\n",
+    "    # Save files\n",
+    "    train_path = f\"data/adult_split{i}_train.csv\"\n",
+    "    test_path  = f\"data/adult_split{i}_test.csv\"\n",
+    "    df_train.to_csv(train_path, index=False)\n",
+    "    df_test.to_csv(test_path, index=False)\n",
+    "\n",
+    "    print(f\"[Split {i}] seed={seed} saved:\")\n",
+    "    print(f\"  {train_path}  -> {df_train.shape}\")\n",
+    "    print(f\"  {test_path}   -> {df_test.shape}\")\n",
+    "\n",
+    "print(\"\\nDone. Created 5 train/test splits in 'data/' with model features + target + (race, gender, education).\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3643683-c826-4471-ae15-44919aba05a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
